2012-01-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_network_components.php
	 include/functions_api.php: Added new functions to Api.

2012-01-17  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: Clean \r and \n from advanced
	  filters.

2012-01-17  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php, include/functions_netflow.php,
	  godmode/netflow/nf_edit_form.php, pandoradb.sql,
	  pandoradb.postgreSQL.sql, pandoradb.oracle.sql: Added suport for
	  custom filters. Small fixes.

	* include/help/en/help_pcap_filter.php,
	  include/help/es/help_pcap_filter.php: Added to repository. Nfdump
	  filter syntax help files.

2012-01-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Added new functions add_agent_policy,
	add_data_module_policy, add_network_module_policy, 
	add_snmp_module_policy and add_plugin_module_policy to Api.

2012-01-17  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php
	  extensions/module_groups.php: Fixed bug: sql error in
	extension "Module Groups" and popup alert.

2012-01-16  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/netflow/nf_edit.php
	  godmode/netflow/nf_item_list.php
	  godmode/netflow/nf_report_item.php: Changed name items.

2012-01-16  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/estado_monitores.php: Fixed bug: count in the group
	mode is not well done because ignore the disabled modules.

2012-01-16  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/netflow/nf_edit.php
	  godmode/netflow/nf_edit_form.php: Changed add button.

2012-01-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: New functions in Api 
	update_network_module, update_plugin_module, update_data_module and
	update_snmp_module.

2012-01-13  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_view.php: Aesthetic fixes.
