@@ -1,3 +1,7 @@
+2012-01-18  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_pcap_filter.php: Added a new help file.
+
 2012-01-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_network_components.php
